# nostrarchives-api

./: .env.example  CLAUDE.md  Cargo.toml  docker-compose.yml
migrations/: 042_client_leaderboard_timeframes.sql
scripts/: clickhouse_init.sql
src/: auth.rs  config.rs  main.rs  nip19.rs
src/api/: handlers.rs  mod.rs
src/db/: clickhouse.rs  clickhouse_models.rs  mod.rs  repository.rs
src/scheduler/: mod.rs
src/ws/: mod.rs
