[package]
name = "nostr-api"
version = "0.1.0"
edition = "2021"
description = "Nostr event ingestion & stats API"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono"] }
redis = { version = "1", features = ["tokio-comp"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bech32 = "0.11"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
sha2 = "0.11"
negentropy = "0.5"
reqwest = { version = "0.13", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
regex = "1.10"
secp256k1 = { version = "0.31", features = ["global-context"] }
base64 = "0.22"
clickhouse = { version = "0.15", features = ["inserter"] }

[[bin]]
name = "test_negentropy"
path = "src/bin/test_negentropy.rs"

[[bin]]
name = "purge_non_wot"
path = "src/bin/purge_non_wot.rs"

[[bin]]
name = "crawl_zaps"
path = "src/bin/crawl_zaps.rs"

[[bin]]
name = "backfill_clickhouse"
path = "src/bin/backfill_clickhouse.rs"
